@@ -2597,9 +2597,9 @@ MouseFocusClickDoesntRaise
 MouseFocusClickRaises
   --> Style * MouseFocusClickRaises
 NoStipledTitles
-  --> Style * StipledTitleOff
+  --> Style * StippledTitleOff
 StipledTitles
-  --> Style * StipledTitle
+  --> Style * StippledTitle
 CaptureHonorsStartsOnPage
   --> Style * CaptureHonorsStartsOnPage
 CaptureIgnoresStartsOnPage
@@ -3924,7 +3924,7 @@ is a comma separated list containing one or more of the keywords
 .IR IconBox ", " IconGrid ", " IconFill ,
 .IR NoTitle " / " Title ,
 .IR TitleAtBottom " / " TitleAtTop ,
-.IR StipledTitle " / " StipledTitleOff ,
+.IR StippledTitle " / " StippledTitleOff ,
 .IR NoHandles " / " Handles ,
 .IR WindowListSkip " / " WindowListHit ,
 .IR CirculateSkip " / " CirculateHit ,
@@ -4077,12 +4077,12 @@ style set, this affects the
 command.
 
 With the
-.I StipledTitle
+.I StippledTitle
 style, are drawn with the same effect that is usually reserved for
 windows with the
 .I Sticky
 style.
-.I StipledTitleOff
+.I StippledTitleOff
 reverts back to normal titles.
 
 .I Color
