@@ -1,3 +1,13 @@
+2000-02-14  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/fvwm2.1:
+	* fvwm/fvwm.h:
+	* fvwm/borders.c:
+	* fvwm/builtins.c:
+	* fvwm/style.c (ProcessNewStyle):
+	* fvwm/style.h:
+	fixed type: stiple -> stipple
+
 2000-02-11  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/misc.c (fvwm_msg):
